--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:h2:~/estudiantejpa
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.show-sql=true
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
