--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#spring.h2.console.settings.web-allow-others=true
-spring.datasource.url=jdbc:postgresql://localhost:50321/aurora
-spring.datasource.username=postgres
-spring.datasource.password=aurora
 
-spring.datasource.platform=postgres
+
+
+
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.profiles.active=postgres
